--- a/index.qmd
+++ b/index.qmd
@@ -16,12 +16,15 @@ WATCH OUT: This is work in progress
 **This is my personal learning material and is therefore neither a
 scientific peer reviewed article nor an authoritative textbook.**
 
-With this book I want to explore the data from the [World Happiness Reports 2012-2025](https://worldhappiness.report/analysis/) using the R
-language.
-
 I am writing this book as a text for others to read because that forces
 me to become explicit and explain all my learning outcomes more
 carefully.
+
+With this book I want to explore the data from the [World Happiness Reports 2012-2025](https://worldhappiness.report/analysis/) using the R
+language. If there are interesting results I will report them in blog posts. At the moment I am still exploring the dataset by creating figures. 
+
+
+
 
 Please keep in mind that this text is not written by an expert but by a
 learner.
